--- a/css/styles.css
+++ b/css/styles.css
@@ -59,3 +59,25 @@ background-color: #512DA8;
     left: 0;
     min-height: 300px;
 }
+#section-non-sm{
+display : none;
+}
+#section-sm{
+display : none;
+}
+
+#section-sm:after{
+    color: green;
+    background-color: green;
+}
+#section-sm:checked:after{
+    color: green;
+}
+#carouselButton {
+    right: 0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
+
+
