--- a/css/styles.scss
+++ b/css/styles.scss
@@ -25,6 +25,7 @@ $carousel-item-height: 300px;
     background-color: $background-pale;
     @include zero-margin(20px, 0px);
 }
+
 .jumbotron {
     @include zero-margin(70px, 30px);
     background: $background-light;
@@ -52,6 +53,7 @@ body {
     border-bottom: 1px solid $lt-gray;
     padding: 10px;
 }
+
 .carousel {
     background: $background-dark;
 
@@ -67,9 +69,28 @@ body {
     }
 }
 
-#carouselButton {
+#carousel-button {
     right: 0px;
     position: absolute;
     bottom: 0px;
-    z-index: 1;
+}
+
+.modal {
+
+    .modal-header {
+        background-color: $background-dark;
+        color: floralwhite;
+
+        button {
+            color: floralwhite;
+        }
+    }
+
+    .modal-body {
+        background-color: $background-pale;
+    }
+
+    .modal-footer {
+        background: $background-light;
+    }
 }
